ive modified the web page to test cicd

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <title>hello world!</title>
     <body>
-        <p>Index.html</p>
+        <p>This is pretty much CICD for a basic website</p>
+        <p>;)</p>
     </body>
 </html>
