--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
     <title>hello world!</title>
     <body>
         <p>:)</p>
-        <p>This is pretty much CICD for a basic website</p>
-        <p>;)</p>
+        <p>Index.html</p>
     </body>
 </html>
