--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <html>
-    <title>hello world!</title>
+    <title>too many containers</title>
     <body>
-        <p>:)</p>
-        <p>Index.html</p>
+        <p>too many containers</p>
     </body>
 </html>
