moved code deployment to own stack within deploy stage

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
     <title>too many containers</title>
     <body>
-        <p>sunnyboy</p>
+        <p>spoons spoons forks</p>
     </body>
 </html>
